# 1brc

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_data.py
src/: main.rs
