[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
panic = "abort"

[dependencies]
ahash = "0.8.12"
crossbeam = "0.8.4"
dashmap = "6.1.0"
fast-float = "0.2.0"
memchr = "2.7.4"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
rayon = "1.10.0"
rustc-hash = "2.1.1"
smol_str = "0.3.2"
tikv-jemallocator = "0.6.0"
